--- a/.env
+++ b/.env
@@ -15,6 +15,13 @@ DB_DATABASE=u5794939_editing
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION_CRM=mysql
+DB_HOST_CRM=127.0.0.1
+DB_PORT_CRM=3306
+DB_DATABASE_CRM=u5794939_allin_bd
+DB_USERNAME_CRM=root
+DB_PASSWORD_CRM=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
