--- a/.env
+++ b/.env
@@ -16,11 +16,11 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 DB_CONNECTION_CRM=mysql
-DB_HOST_CRM=127.0.0.1
+DB_HOST_CRM=crm-allinedu.com
 DB_PORT_CRM=3306
 DB_DATABASE_CRM=u5794939_allin_bd
-DB_USERNAME_CRM=root
-DB_PASSWORD_CRM=
+DB_USERNAME_CRM=u5794939_crm_allinedu
+DB_PASSWORD_CRM=crm_allinedu
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
