--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME='Essay Editing Platform'
 APP_ENV=local
 APP_KEY=base64:qFjkwogQ0dc8KC0XdBaMIfKodHXqW2xK9MmCpNfgwzk=
 APP_DEBUG=true
@@ -36,12 +36,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=7c4080efa87fd1
+MAIL_PASSWORD=fa422b8856a512
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS='essay@all-inedu.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
