--- a/.env
+++ b/.env
@@ -50,10 +50,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID="1503414"
+PUSHER_APP_KEY="174254d6ea94361b0744"
+PUSHER_APP_SECRET="70eddce177c31bdc3279"
+PUSHER_APP_CLUSTER="ap1"
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
