--- a/.env
+++ b/.env
@@ -9,14 +9,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=all-inedu.com
 DB_PORT=3306
-# DB_DATABASE=u5332263_dev.editing
-# DB_USERNAME=u5332263_allin
-# DB_PASSWORD=8+~yq7XlNv9_
-DB_DATABASE=u5794939_editing_v2
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u5332263_dev.editing
+DB_USERNAME=u5332263_allin
+DB_PASSWORD=8+~yq7XlNv9_
+# DB_DATABASE=u5794939_editing_v2
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 DB_CONNECTION_CRM=mysql
 DB_HOST_CRM=crm-allinedu.com
