--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=all-inedu.com
 DB_PORT=3306
 DB_DATABASE=u5332263_dev.editing
 DB_USERNAME=u5332263_allin
@@ -22,7 +22,7 @@ DB_DATABASE_CRM=u5794939_allin_bd
 DB_USERNAME_CRM=u5794939_crm_allinedu
 DB_PASSWORD_CRM=crm_allinedu
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
@@ -50,10 +50,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID="1503414"
-PUSHER_APP_KEY="174254d6ea94361b0744"
-PUSHER_APP_SECRET="70eddce177c31bdc3279"
-PUSHER_APP_CLUSTER="ap1"
+PUSHER_APP_ID=1503414
+PUSHER_APP_KEY=174254d6ea94361b0744
+PUSHER_APP_SECRET=70eddce177c31bdc3279
+PUSHER_APP_CLUSTER=ap1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
