--- a/.env
+++ b/.env
@@ -4,16 +4,22 @@ APP_KEY=base64:qFjkwogQ0dc8KC0XdBaMIfKodHXqW2xK9MmCpNfgwzk=
 APP_DEBUG=true
 APP_URL='https://editing.crm-allinedu.com'
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=crm-allinedu.com
+# DB_PORT=3306
+# DB_DATABASE=u5794939_editing
+# DB_USERNAME=u5794939_crm_allinedu
+# DB_PASSWORD=crm_allinedu
 DB_CONNECTION=mysql
-DB_HOST=crm-allinedu.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u5794939_editing
-DB_USERNAME=u5794939_crm_allinedu
-DB_PASSWORD=crm_allinedu
+DB_DATABASE=u5794939_editing_prod
+DB_USERNAME=root
+DB_PASSWORD=
 
 # DB_CONNECTION=mysql
 # DB_HOST=all-inedu.com
@@ -42,19 +48,19 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=all.in.eduspace@gmail.com
-MAIL_PASSWORD=bwhlsupvcrqxhttj
-MAIL_ENCRYPTION=tls
-
 # MAIL_MAILER=smtp
-# MAIL_HOST=smtp.mailtrap.io
-# MAIL_PORT=2525
-# MAIL_USERNAME=8449fd6e7f5e26
-# MAIL_PASSWORD=d5b344553b9bdf
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=all.in.eduspace@gmail.com
+# MAIL_PASSWORD=bwhlsupvcrqxhttj
 # MAIL_ENCRYPTION=tls
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=7c4080efa87fd1
+MAIL_PASSWORD=fa422b8856a512
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS='essay@all-inedu.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -64,10 +70,14 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1503414
-PUSHER_APP_KEY=174254d6ea94361b0744
-PUSHER_APP_SECRET=70eddce177c31bdc3279
-PUSHER_APP_CLUSTER=ap1
+# PUSHER_APP_ID=1503414
+# PUSHER_APP_KEY=174254d6ea94361b0744
+# PUSHER_APP_SECRET=70eddce177c31bdc3279
+# PUSHER_APP_CLUSTER=ap1
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
