--- a/.env
+++ b/.env
@@ -2,24 +2,24 @@ APP_NAME='Essay Editing Platform'
 APP_ENV=local
 APP_KEY=base64:qFjkwogQ0dc8KC0XdBaMIfKodHXqW2xK9MmCpNfgwzk=
 APP_DEBUG=true
-APP_URL='https://editing.crm-allinedu.com'
+APP_URL='http://localhost'
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=crm-allinedu.com
+# DB_PORT=3306
+# DB_DATABASE=u5794939_editing
+# DB_USERNAME=u5794939_crm_allinedu
+# DB_PASSWORD=crm_allinedu
 DB_CONNECTION=mysql
-DB_HOST=crm-allinedu.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=u5794939_editing
-DB_USERNAME=u5794939_crm_allinedu
-DB_PASSWORD=crm_allinedu
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=u5794939_editing_prod
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_USERNAME=root
+DB_PASSWORD=
 
 # DB_CONNECTION=mysql
 # DB_HOST=all-inedu.com
@@ -28,12 +28,12 @@ DB_PASSWORD=crm_allinedu
 # DB_USERNAME=u5332263_allin
 # DB_PASSWORD=8+~yq7XlNv9_
 
-DB_CONNECTION_CRM=mysql
-DB_HOST_CRM=crm-allinedu.com
-DB_PORT_CRM=3306
-DB_DATABASE_CRM=u5794939_allin_bd
-DB_USERNAME_CRM=u5794939_crm_allinedu
-DB_PASSWORD_CRM=crm_allinedu
+# DB_CONNECTION_CRM=mysql
+# DB_HOST_CRM=crm-allinedu.com
+# DB_PORT_CRM=3306
+# DB_DATABASE_CRM=u5794939_allin_bd
+# DB_USERNAME_CRM=u5794939_crm_allinedu
+# DB_PASSWORD_CRM=crm_allinedu
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
@@ -48,12 +48,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=all.in.eduspace@gmail.com
-MAIL_PASSWORD=bwhlsupvcrqxhttj
-MAIL_ENCRYPTION=tls
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=all.in.eduspace@gmail.com
+# MAIL_PASSWORD=bwhlsupvcrqxhttj
+# MAIL_ENCRYPTION=tls
 
 # MAIL_MAILER=smtp
 # MAIL_HOST=smtp.mailtrap.io
@@ -61,6 +61,12 @@ MAIL_ENCRYPTION=tls
 # MAIL_USERNAME=7c4080efa87fd1
 # MAIL_PASSWORD=fa422b8856a512
 # MAIL_ENCRYPTION=tls
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=23c82b292c5675
+MAIL_PASSWORD=19f5d406fe09cb
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS='essay@all-inedu.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
