--- a/.env
+++ b/.env
@@ -8,18 +8,18 @@ LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=crm-allinedu.com
-# DB_PORT=3306
-# DB_DATABASE=u5794939_editing
-# DB_USERNAME=u5794939_crm_allinedu
-# DB_PASSWORD=crm_allinedu
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=crm-allinedu.com
 DB_PORT=3306
 DB_DATABASE=u5794939_editing
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=u5794939_crm_allinedu
+DB_PASSWORD=crm_allinedu
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=u5794939_editing
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 # DB_CONNECTION=mysql
 # DB_HOST=all-inedu.com
@@ -48,12 +48,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# MAIL_MAILER=smtp
-# MAIL_HOST=smtp.gmail.com
-# MAIL_PORT=587
-# MAIL_USERNAME=all.in.eduspace@gmail.com
-# MAIL_PASSWORD=bwhlsupvcrqxhttj
-# MAIL_ENCRYPTION=tls
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=all.in.eduspace@gmail.com
+MAIL_PASSWORD=bwhlsupvcrqxhttj
+MAIL_ENCRYPTION=tls
 
 # MAIL_MAILER=smtp
 # MAIL_HOST=smtp.mailtrap.io
@@ -61,12 +61,12 @@ REDIS_PORT=6379
 # MAIL_USERNAME=7c4080efa87fd1
 # MAIL_PASSWORD=fa422b8856a512
 # MAIL_ENCRYPTION=tls
-MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=23c82b292c5675
-MAIL_PASSWORD=19f5d406fe09cb
-MAIL_ENCRYPTION=tls
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=23c82b292c5675
+# MAIL_PASSWORD=19f5d406fe09cb
+# MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS='essay@all-inedu.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
