--- a/.env
+++ b/.env
@@ -8,10 +8,16 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=essay_editing
+# DB_USERNAME=root
+# DB_PASSWORD=    
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=essay_editing
+DB_DATABASE=u5794939_editing
 DB_USERNAME=root
 DB_PASSWORD=    
 # DB_CONNECTION=mysql
@@ -21,12 +27,12 @@ DB_PASSWORD=
 # DB_USERNAME=u5332263_allin
 # DB_PASSWORD=8+~yq7XlNv9_
 
-DB_CONNECTION_CRM=mysql
-DB_HOST_CRM=crm-allinedu.com
-DB_PORT_CRM=3306
-DB_DATABASE_CRM=u5794939_allin_bd
-DB_USERNAME_CRM=u5794939_crm_allinedu
-DB_PASSWORD_CRM=crm_allinedu
+# DB_CONNECTION_CRM=mysql
+# DB_HOST_CRM=crm-allinedu.com
+# DB_PORT_CRM=3306
+# DB_DATABASE_CRM=u5794939_allin_bd
+# DB_USERNAME_CRM=u5794939_crm_allinedu
+# DB_PASSWORD_CRM=crm_allinedu
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
