--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.24",
         "pusher/pusher-php-server": "^7.2"
