--- a/.env
+++ b/.env
@@ -55,6 +55,13 @@ MAIL_USERNAME=all.in.eduspace@gmail.com
 MAIL_PASSWORD=bwhlsupvcrqxhttj
 MAIL_ENCRYPTION=tls
 
+# MAIL_DRIVER=smtp
+# MAIL_HOST=srv115.niagahoster.com
+# MAIL_PORT=465
+# MAIL_USERNAME=no-reply@all-inedu.com
+# MAIL_PASSWORD=all-inedu04
+# MAIL_ENCRYPTION=tls
+
 # MAIL_MAILER=smtp
 # MAIL_HOST=smtp.mailtrap.io
 # MAIL_PORT=2525
