--- a/.env
+++ b/.env
@@ -34,12 +34,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# MAIL_MAILER=smtp
-# MAIL_HOST=smtp.gmail.com
-# MAIL_PORT=587
-# MAIL_USERNAME=all.in.eduspace@gmail.com
-# MAIL_PASSWORD=bwhlsupvcrqxhttj
-# MAIL_ENCRYPTION=tls
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=all.in.eduspace@gmail.com
+MAIL_PASSWORD=bwhlsupvcrqxhttj
+MAIL_ENCRYPTION=tls
 
 # MAIL_DRIVER=smtp
 # MAIL_HOST=srv115.niagahoster.com
@@ -48,12 +48,12 @@ REDIS_PORT=6379
 # MAIL_PASSWORD=all-inedu04
 # MAIL_ENCRYPTION=tls
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=7c4080efa87fd1
-MAIL_PASSWORD=fa422b8856a512
-MAIL_ENCRYPTION=tls
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=8449fd6e7f5e26
+# MAIL_PASSWORD=d5b344553b9bdf
+# MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS='essay@all-inedu.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
