--- a/.env_backup
+++ b/.env_backup
@@ -2,14 +2,14 @@ APP_NAME='Essay Editing Platform'
 APP_ENV=local
 APP_KEY=base64:qFjkwogQ0dc8KC0XdBaMIfKodHXqW2xK9MmCpNfgwzk=
 APP_DEBUG=true
-APP_URL='https://editing.crm-allinedu.com'
+APP_URL='http://localhost'
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=crm-allinedu.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=u5794939_editing
 DB_USERNAME=u5794939_crm_allinedu
@@ -20,20 +20,6 @@ DB_PASSWORD=crm_allinedu
 # DB_DATABASE=u5794939_editing
 # DB_USERNAME=root
 # DB_PASSWORD=
-
-DB_CONNECTION_CRM=mysql
-DB_HOST_CRM=153.92.10.186
-DB_PORT_CRM=3306
-DB_DATABASE_CRM=u5794939_allin_bd
-DB_USERNAME_CRM=u5794939_crm_allinedu
-DB_PASSWORD_CRM=crm_allinedu
-
-DB_CONNECTION_CRM_V2=mysql
-DB_HOST_CRM_V2=
-DB_PORT_CRM_V2=
-DB_DATABASE_CRM_V2=
-DB_USERNAME_CRM_V2=
-DB_PASSWORD_CRM_V2=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
@@ -50,23 +36,16 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
+MAIL_PORT=587
 MAIL_USERNAME=all.in.eduspace@gmail.com
-MAIL_PASSWORD=vaudiwnzhtmhqbzf
-MAIL_ENCRYPTION=ssl
-
-# MAIL_DRIVER=smtp
-# MAIL_HOST=srv115.niagahoster.com
-# MAIL_PORT=465
-# MAIL_USERNAME=no-reply@all-inedu.com
-# MAIL_PASSWORD=all-inedu04
-# MAIL_ENCRYPTION=tls
+MAIL_PASSWORD=bwhlsupvcrqxhttj
+MAIL_ENCRYPTION=tls
 
 # MAIL_MAILER=smtp
-# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_HOST=smtp.mailtrap.io
 # MAIL_PORT=2525
-# MAIL_USERNAME=8449fd6e7f5e26
-# MAIL_PASSWORD=d5b344553b9bdf
+# MAIL_USERNAME=7c4080efa87fd1
+# MAIL_PASSWORD=fa422b8856a512
 # MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS='essay@all-inedu.com'
 MAIL_FROM_NAME="${APP_NAME}"
