--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:qFjkwogQ0dc8KC0XdBaMIfKodHXqW2xK9MmCpNfgwzk=
 APP_DEBUG=true
 APP_URL='https://editing.crm-allinedu.com'
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
