11/10/2023 Update Log View role Admin and Managing

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:qFjkwogQ0dc8KC0XdBaMIfKodHXqW2xK9MmCpNfgwzk=
 APP_DEBUG=true
 APP_URL='https://editing.crm-allinedu.com'
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -68,8 +68,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=0586f0804b39ce
-MAIL_PASSWORD=a50288fcfe3bcb
+MAIL_USERNAME=8c284a6515b1b3
+MAIL_PASSWORD=90e9fa39bf0cf2
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS='essay@all-inedu.com'
 MAIL_FROM_NAME="${APP_NAME}"
