--- a/.env
+++ b/.env
@@ -18,7 +18,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u5794939_editing
+DB_DATABASE=test_essay_editing
+# DB_DATABASE=u5794939_editing
 DB_USERNAME=root
 DB_PASSWORD=
 
